<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item android:id="@+id/home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home"/>

        <item android:id="@+id/calendar"
            android:title="@string/nav_calendar"
            android:icon="@drawable/ic_calendar"/>

        <item android:id="@+id/contact"
            android:title="@string/nav_contact"
            android:icon="@drawable/ic_account"/>
    </group>

    <item android:title="@string/nav_account">
        <menu>
            <item android:id="@+id/account"
                android:title="@string/nav_profile"
                android:icon="@drawable/ic_person"/>

            <item android:id="@+id/password"
                android:title="@string/nav_password"
                android:icon="@drawable/ic_lock"/>

            <item android:id="@+id/logout"
            android:title="@string/nav_logout"
                android:icon="@drawable/ic_logout"/>

        </menu>
    </item>
</menu>